--- a/templates/morado/index.html
+++ b/templates/morado/index.html
@@ -2,19 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Toronjil</title>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
 
       <div class="header">
-        <h3 class="text-muted">Hello Queenie!</h3>
+        <h3 class="text-muted">More to come</h3>
       </div>
       <div class="jumbotron">
-        <h1>Have a wonderful day</h1>
-        <p class="lead">Say hi to Titan</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Don't click here</a></p>
+        <h1></h1>
       </div>
 
     </div>
