--- a/templates/morado/index.html
+++ b/templates/morado/index.html
@@ -8,6 +8,19 @@
   <body>
     <div class="container">
 
+      <div class="masthead">
+        <h3 class="text-muted">Toronjil Morado</h3>
+        <nav>
+          <ul class="nav nav-justified">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Maps</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+
       <div class="header">
         <h3 class="text-muted">More to come</h3>
       </div>
