--- a/templates/morado/index.html
+++ b/templates/morado/index.html
@@ -1,34 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Toronjil</title>
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
+{% extends "morado/base.html" %}
 
-      <div class="masthead">
-        <h3 class="text-muted">Toronjil Morado</h3>
-        <nav>
-          <ul class="nav nav-justified">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Maps</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
+{% block main %}
+<div class="header">
+  <h1 class="text-muted">More to come</h1>
+</div>
+<div class="jumbotron">
+  <h2></h2>
+</div>
 
-      <div class="header">
-        <h3 class="text-muted">More to come</h3>
-      </div>
-      <div class="jumbotron">
-        <h1></h1>
-      </div>
 
-    </div>
-    
-  </body>
-</html>
+ {% endblock %}
