--- a/templates/blog/blog_index.html
+++ b/templates/blog/blog_index.html
@@ -1,14 +1,8 @@
-{% extends "morado/base.html" %}
+{% extends "blog/base.html" %}
 {% load django_markdown %}
 
-{% block main%}
-<div class="row">
-  <div class="col-sm-8 blog-main">
+{% block blog%}
 
-    <div class="blog-header">
-      <h1 class="blog-title">The Bootstrap Blog</h1>
-      <p class="lead blog-description">The official example template of creating a blog with Bootstrap.</p>
-    </div>
 {% for object in object_list %}
       <div class="post">
         <h2><a href="{% url "entry_detail" slug=object.slug %}">{{ object.title }}</a></h2>
@@ -19,20 +13,5 @@
         {{ object.body|markdown}}
       </div>
 {% endfor %}
-{% if is_paginated %}
-      <ul class="pager">
-        <li {% if not page_obj.has_previous %}class="disabled"{% endif %}><a {% if page_obj.has_previous %}href="?page={{ page_obj.previous_page_number }}"{% endif %}>Prev</a></li>
-        <li {% if not page_obj.has_next %}class="disabled"{% endif %}><a {% if page_obj.has_next %}href="?page={{ page_obj.next_page_number }}"{% endif %}>Next</a></li>
-      </ul>
-{% endif %}
-  </div><!-- /.blog-main -->
-  
-  <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
-    <div class="sidebar-module sidebar-module-inset">
-      <h4>About</h4>
-        <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-    </div>
-  </div><!-- /.blog-sidebar -->
-</div><!-- /.row -->
 
 {% endblock %}
